--- a/application.properties
+++ b/application.properties
@@ -1,5 +1,6 @@
 #Griffon Metadata file
-#Fri Dec 10 19:30:01 EST 2010
-app.griffon.version=0.9.2-beta-3
+#Mon Mar 12 14:11:15 CET 2012
+app.griffon.version=0.9.5-rc2
 app.name=worldwind
-plugins.jogl-compat=0.1
+plugins.jogl-compat=0.2
+plugins.swing=0.9.5
