--- a/application.properties
+++ b/application.properties
@@ -1,6 +1,6 @@
 #Griffon Metadata file
-#Mon Mar 12 14:11:15 CET 2012
-app.griffon.version=0.9.5-rc2
+#Thu Apr 05 12:42:14 CEST 2012
+app.griffon.version=0.9.5
 app.name=worldwind
 plugins.jogl-compat=0.2
 plugins.swing=0.9.5
