--- a/application.properties
+++ b/application.properties
@@ -1,4 +1,6 @@
-app.griffon.version=1.0.0
+#Griffon Metadata file
+#Tue Jul 16 11:57:13 CEST 2013
+app.griffon.version=1.3.0
 app.name=worldwind
-plugins.jogl-compat=1.0.0
-plugins.swing=1.0.0
+plugins.jogl-compat=1.1.0
+plugins.swing=1.3.1
